--- a/CSV_JSON_XML.ipynb
+++ b/CSV_JSON_XML.ipynb
@@ -21,23 +21,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "b9ZJwxBKX0Ah",
-    "outputId": "65d8328b-223c-4fff-83d1-f9b05b926289"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#@title Run me first\n",
+    "import urllib\n",
     "import pandas as pd\n",
     "import yaml\n",
-    "import os.path\n",
-    "if not os.path.isfile('sampledata/ESP/USDtoGBP.csv') :\n",
-    "  print('a')\n",
-    "  !rm -rf sampledata\n",
-    "  !git clone -qq https://github.com/awchisholm/sampledata.git"
+    "result = urllib.request.urlretrieve('https://raw.githubusercontent.com/awchisholm/sampledata/master/ESP/USDtoGBP.csv', 'USDtoGBP.csv')\n",
+    "result = urllib.request.urlretrieve('https://raw.githubusercontent.com/awchisholm/sampledata/master/pandas/ps3_small_dodgy.csv', 'ps3_small_dodgy.csv')\n",
+    "result = urllib.request.urlretrieve('https://raw.githubusercontent.com/awchisholm/sampledata/master/pandas/ps3_small_ok.csv', 'ps3_small_ok.csv')\n",
+    "result = urllib.request.urlretrieve('https://raw.githubusercontent.com/awchisholm/sampledata/master/yaml/mc.yml', 'mc.yml')"
    ]
   },
   {
@@ -66,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "currency = pd.read_csv('sampledata/ESP/USDtoGBP.csv', index_col=None)\n",
+    "currency = pd.read_csv('USDtoGBP.csv', index_col=None)\n",
     "currency.head()"
    ]
   },
@@ -93,7 +87,7 @@
    "source": [
     "# See if you can fix the problem with the CSV file\n",
     "# You should be able to edit it with Jupyter\n",
-    "ps3_dodgy = pd.read_csv('sampledata/pandas/ps3_small_dodgy.csv')\n",
+    "ps3_dodgy = pd.read_csv('ps3_small_dodgy.csv')\n",
     "ps3_dodgy.head()"
    ]
   },
@@ -114,7 +108,7 @@
    },
    "outputs": [],
    "source": [
-    "ps3_ok = pd.read_csv('sampledata/pandas/ps3_small_ok.csv')\n",
+    "ps3_ok = pd.read_csv('ps3_small_ok.csv')\n",
     "ps3_ok.head()"
    ]
   },
@@ -442,7 +436,7 @@
    "source": [
     "import yaml\n",
     "\n",
-    "with open('sampledata/yaml/mc.yml', 'r') as stream:\n",
+    "with open('mc.yml', 'r') as stream:\n",
     "  config_yaml = yaml.safe_load(stream)#, Loader=yaml.FullLoader)\n",
     "\n",
     "config_yaml"
@@ -517,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
