--- a/Semi_structured_text.ipynb
+++ b/Semi_structured_text.ipynb
@@ -11,11 +11,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "nCjFKvTqf4xY"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ï»¿Project Gutenberg's Adventures of Sherlock Holmes, by A. Conan Doyle\r\n",
+      "\r\n",
+      "This eBook is for the use of anyone anywhere at no cost and with\r\n",
+      "almost no restrictions whatsoever.  You may copy it, give it away or\r\n",
+      "re-use it under the terms of the Project Gutenberg License included\r\n",
+      "with this eBook or online at www.gutenberg.org/license\r\n",
+      "\r\n",
+      "\r\n",
+      "Title: Adventures of Sherlock Holmes\r\n",
+      "       Illustrated\r\n",
+      "\r\n",
+      "Author: A. Conan Doyle\r\n",
+      "\r\n",
+      "Release Date: February 20, 2015 [EBook #48320]\r\n",
+      "\r\n",
+      "Language: English\r\n",
+      "\r\n",
+      "Character set encoding: UTF-8\r\n",
+      "\r\n",
+      "*** START OF THIS PROJECT GUTENBERG EBOOK ADVENTURES OF SHERLOCK HOLME\n"
+     ]
+    }
+   ],
    "source": [
     "# This downloads a book\n",
     "import requests\n",
@@ -48,11 +75,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "Z282s5yYjJqI"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101346\n"
+     ]
+    }
+   ],
    "source": [
     "# This code splits the text into words by assuming a space shows where a word is\n",
     "words = booktext.split(sep=' ')\n",
@@ -62,11 +97,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "OT5MLPJJrU6A"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ï»¿Project',\n",
+       " \"Gutenberg's\",\n",
+       " 'Adventures',\n",
+       " 'of',\n",
+       " 'Sherlock',\n",
+       " 'Holmes,',\n",
+       " 'by',\n",
+       " 'A.',\n",
+       " 'Conan',\n",
+       " 'Doyle\\r\\n\\r\\nThis',\n",
+       " 'eBook',\n",
+       " 'is',\n",
+       " 'for',\n",
+       " 'the',\n",
+       " 'use',\n",
+       " 'of',\n",
+       " 'anyone',\n",
+       " 'anywhere',\n",
+       " 'at',\n",
+       " 'no']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# But splitting on spaces is a bit rubbish\n",
     "words[0:20]"
@@ -74,11 +139,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "37H3J15bnFhU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "109463\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['ï»¿Project',\n",
+       " \"Gutenberg's\",\n",
+       " 'Adventures',\n",
+       " 'of',\n",
+       " 'Sherlock',\n",
+       " 'Holmes,',\n",
+       " 'by',\n",
+       " 'A.',\n",
+       " 'Conan',\n",
+       " 'Doyle',\n",
+       " 'This',\n",
+       " 'eBook',\n",
+       " 'is',\n",
+       " 'for',\n",
+       " 'the',\n",
+       " 'use',\n",
+       " 'of',\n",
+       " 'anyone',\n",
+       " 'anywhere',\n",
+       " 'at']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Splitting using space is a bit rubbish\n",
     "# In fact splitting by default treats spaces, tabs and new lines as separators\n",
@@ -92,11 +194,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "o5YwN3m7tyv-"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15841"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This code works out how many unique words there are\n",
     "wordfreq = []\n",
@@ -136,11 +249,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "06LBml4B2HLG"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jun 14 15:16:01 combo sshd(pam_unix)[19939]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=218.188.2.4 \n",
+      "Jun 14 15:16:02 combo sshd(pam_unix)[19937]: check pass; user unknown\n",
+      "Jun 14 15:16:02 combo sshd(pam_unix)[19937]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=218.188.2.4 \n",
+      "Jun 15 02:04:59 combo sshd(pam_unix)[20882]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=220-135-151-1.hinet-ip.hinet.net  user=root\n",
+      "Jun 15 02:04:59 combo sshd(pam_unix)[20884]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=220-135-151-1.hinet-ip.hinet.net  user=root\n",
+      "Jun 15 02:04:59 combo sshd(pam_unix)[20883]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=220-135-151-1.hinet-ip.hinet.net  user=root\n",
+      "Jun 15 02:04:59 combo sshd(pam_unix)[20885]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=220-135-151-1.hinet-ip.hinet.net  user=root\n",
+      "Jun 15 02:04:59 combo sshd(pam_unix)[20886]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=220-135-151-1.hinet-ip.hinet.net  user=root\n",
+      "Jun 15 02:04:59 combo sshd(pam_unix)[20892]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=220-135-151-1.hinet-ip.hinet.net  user=root\n",
+      "Jun 15 02:04:59 combo sshd(pam_unix)[20893]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=220-135-151-1.hinet-ip.hinet.net  user=root\n",
+      "Jun 15 02:04:59 combo sshd(pam_unix)[20896]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=220-135-151-1.hinet-ip.hinet.net  user=root\n",
+      "Jun 15 02:04:59 combo sshd(pam_unix)[20897]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=220-135-151-1.hinet-ip.hinet.net  user=root\n",
+      "Jun 15 02:04:59 combo sshd(pam_unix)[20898]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=220-135-151-1.hinet-ip.hinet.net  user=root\n",
+      "Jun 15 04:06:18 combo su(pam_unix)[21416]: session opened fo\n"
+     ]
+    }
+   ],
    "source": [
     "url = 'https://raw.githubusercontent.com/logpai/loghub/master/Linux/Linux_2k.log'\n",
     "import requests\n",
@@ -189,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
